public/css/style.css
/* ... */
#head > div { position:relative }
	
	#head-logo {
		position:absolute;
		left:-390px;
		top:0;
		width:917px;
		height:268px;
		pointer-events:none;
		background:url("/images/logo.png") no-repeat; }
	#head.docs #head-logo { left:-381px; position:fixed; }
	#head.forum #head-logo { left:-370px; }
	
  #head-logo-link {
    position:absolute;
    display:block;
    top:10px;
    left:10px;
    width:236px;
    height:85px; }
  #head.docs #head-logo-link { left:-260px; }
  #head.forum #head-logo-link { left:30px; }
	
	#head-links { position:absolute; right:0; bottom:13px; }
	#head.docs #head-links,
	#head.forum #head-links { right:20px; }
	#head-links > a {
		display:block;
		float:left;
		padding:10px 25px 25px 25px;
		color:rgba(255,255,255,.5);
		font-size:14pt;
		text-decoration:none;
		letter-spacing:1px;
		background:url("/images/head-link.png") no-repeat center bottom;
		transition:
			color 0.3s ease-in-out,
			text-shadow 0.4s ease-in-out; }
	#head-links > a:hover,
	#head-links > a.active {
		color:#1cb3ec;
		text-shadow:0 0 4px rgba(28,179,236,.8);
		background-image:url("/images/head-link_hover.png"); }

	#head-banner { width:200px; height:100px; background:#000; }

#neck { z-index:0; height:40px; }
#neck.home { height:370px; }
#neck > div { position:relative }
	
	#glow-arrow {
		position:absolute;
		top:-9px;
		left:0;
		right:-16px;
		height:48px;
		background:url("/images/glow-arrow.png") no-repeat right; }
  glow-arrow.docs { left:280px; }
	
	#glow-line-vert {
		position:fixed;
		top:100px;
		left:280px;
		width:3px;
		height:844px;
		background:url("/images/glow-line-vert.png") no-repeat; }


#body { z-index:1; position:relative; background:rgba(220,231,248,.6); }
#body.docs { margin:0 40px 20px 320px; }
#body.forum { margin:0 40px 20px 40px; min-height: 700px; }
	
	#body-border {
		position:absolute;
		top:-25px;
		left:0;
		right:0;
		height:35px;
		background:rgba(0,0,0,.25); }
	
	#body-border-left {
		position:absolute;
		left:-25px;
		top:-25px;
		bottom:-25px;
		width:35px;
		background:rgba(0,0,0,.25); }
	
	#body-border-right {
		position:absolute;
		right:-25px;
		top:-25px;
		bottom:-25px;
		width:35px;
		background:rgba(0,0,0,.25); }
	
	#body-border-bottom {
		position:absolute;
		left:10px;
		right:10px;
		bottom:-25px;
		height:35px;
		background:rgba(0,0,0,.25); }
	
	#body.docs #body-border,
	#body.forum #body-border { left:10px; right:10px; }
	
	#glow-line {
		position:absolute;
		top:-27px;
		left:100px;
		right:-25px;
		height:3px;
		background:url("/images/glow-line.png") no-repeat left; }
	#glow-line-bottom {
		position:absolute;
		bottom:-27px;
		left:-25px;
		right:100px;
		height:3px;
		background:url("/images/glow-line2.png") no-repeat right; }
	
	#content { padding:40px 0; }
	#content.page { width:680px; min-height:800px; padding-left:20px; }
	#content h1 { font-size:20pt; letter-spacing:1px; color:rgba(0,0,0,.75); }
	#content h2 { font-size:16pt; letter-spacing:1px; color:rgba(0,0,0,.7); margin-top:40px; }
	#content p { text-align:justify; color:rgba(0,0,0,.8); }
	#content a { color:#CEDAE9; text-decoration:none; }
	#content a:hover { color:#fff;  }
	#content ul { padding-left:20px; }
	#content li { margin-bottom:10px; text-align:justify; }
    
    #talk-heads { overflow:auto; margin:0 8px 0 8px; }
    #talk-heads > div { float:left; font-size:120%; font-weight:bold; }
    #talk-heads > .topic { width:55%; }
    #talk-heads > .detail { width:15%; }
    #talk-heads > .activity { width:15%; }
    #talk-heads > .users { width:15%; }
    #talk-heads > div > div { margin:0 10px 10px 10px; padding:0 10px 10px 10px; border-bottom:1px dashed rgba(0,0,0,0.4); }
    #talk-heads > .topic > div { margin-left:0; }
    #talk-heads > .activity > div { margin-right:0; }
    
    #talk-thread  > div,
    #talk-threads > div {
      position:relative;
      margin:5px 0;
      overflow:auto;
      border-radius:3px;
      border:8px solid rgba(0,0,0,.8);
      border-top:none;
      border-bottom:none;
      background:rgba(0,0,0,0.1);
    }
    #talk-threads > div
    {
      line-height: 150%;
    }
    #talk-thread  > div:nth-child(odd) { background:rgba(255,255,255,0.1); }
    #talk-threads > div:nth-child(odd) { background:rgba(0,0,0,0.2); }
    #talk-thread  > div > div,
    #talk-threads > div > div
    {
      float:left;
      white-space: nowrap;
      text-overflow: ellipsis;
      overflow: hidden;
      font-size: 10pt;
    }
    #talk-thread  > div > div > div,
    #talk-threads > div > div > div { margin: 5px 20px; }
    #talk-thread > div > .topic
    {
      margin-top: 25pt;
      white-space: normal;
    }
    #talk-thread > div > .topic > div > span.date
    {
      position: absolute;
      top: 5px;
      right: 10pt;
      border-bottom: 1px dashed;
      color: #3D3D3D;
    }
    #talk-threads > div > .topic { width:55%; }
    #talk-threads > div > .users { width:15%; overflow:hidden; }
    #talk-threads > div > .users > div > img
    {
      margin-bottom: -4pt;
      cursor: help;
    }
    #talk-threads > div > .detail { width:15%; overflow:hidden; }
    #talk-thread  > div > .author,
    #talk-threads > div > .activity {
      width:15%;
      overflow:hidden;
      background:rgba(0,0,0,0.8);
      color: white;
    }
    #talk-thread > div > .author {
      height: 100%;
      position: absolute;
    }
    #talk-thread  > div > .author a,
    #talk-threads > div > .author a { color:#1cb3ec !important; }
    #talk-thread  > div > .author a:hover,
    #talk-threads > div > .author a:hover { color:#fff !important; }
    #talk-threads > div > .topic .pages { float:right; }
    #talk-threads > div > .topic > div > a { font-weight:bold; }
    #talk-threads > div > .detail > div { float:left; margin:0; }
    #talk-threads > div > .detail > div > div { margin-left:20px; padding: 5px 5px 5px 22px; }
    #talk-threads > div > .detail > div { width:50%; }
/* ... */

